--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
-<html>
-<header><title>This is title</title></header>
-<body>
-Hello world
-Test
-</body>
-</html>
+---
+layout: home
+title: My website
+subtitle: This is where I will tell my friends way too much about me
+---
